# toyotapi

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
fieldrig/: __init__.py  __main__.py  config.py  logging_setup.py
fieldrig/core/: __init__.py  events.py  hardware.py  manager.py  module.py  power.py  sysinfo.py
fieldrig/modules/audio/: __init__.py  bluetooth.py  channels.py  module.py  mpris.py  pipewire.py  waveform.py
fieldrig/modules/camera/: __init__.py  capture.py  module.py
fieldrig/modules/obd/: __init__.py  elm327.py  module.py
fieldrig/server/: app.py
fieldrig/ui/: app.py  fieldrig.tcss
fieldrig/ui/screens/: __init__.py  audio.py  base.py  bluetooth.py  home.py  placeholder.py
fieldrig/ui/widgets/: __init__.py  event_feed.py  nav_bar.py  now_playing.py  status_bar.py  system_stats.py  waveform.py
fieldrig/web/: app.js  index.html  style.css
scripts/: smoke_test.py  smoke_test_web.py
setup/: 01-system.sh  02-display.sh  03-autologin.sh  04-python-env.sh  05-autostart.sh  06-readonly.sh  README.md
setup/files/: fieldrig-launch.sh  fieldrig-mount  fieldrig-ro  fieldrig-rw  fieldrig-seal  fieldrig-server.service  fieldrig-status  fieldrig-tmpfiles.conf  fieldrig-unseal  fieldrig.desktop  fieldrig.sudoers  make-blank-cursor.py  mpris-proxy.service
