[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldrig"
version = "0.3.0"
description = "FieldRig vehicle terminal - Raspberry Pi 5 car computer for a 2018 Toyota Corolla"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "textual>=1.0",
    "dbus-fast>=2.21",          # event-driven MPRIS media control (pure Python)
]

[project.optional-dependencies]
# Hardware-only deps; the app degrades gracefully without them (dev mode).
pi = [
    "pyaudio>=0.2.13",
    "pyudev>=0.24",
    "gpiod>=2.1",
    "obd>=0.7",                 # ELM327 OBD-II reader (Phase 4)
    "opencv-python-headless>=4.8",  # UVC camera capture (Phase 8)
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
fieldrig = "fieldrig.__main__:main"

[tool.setuptools.packages.find]
include = ["fieldrig*"]

[tool.setuptools.package-data]
"fieldrig.ui" = ["*.tcss"]
"fieldrig.web" = ["*.html", "*.css", "*.js"]
